manifests/deployment-1.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "tpcsdemo-d90b"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "tpcsdemo-d90b"
  template:
    metadata:
      labels:
        app: "tpcsdemo-d90b"
    spec:
      containers:
        - name: "tpcsdemo-d90b"
          image: "tpcscluscontainer.azurecr.io/tpcsdemo"
          ports:
          - containerPort: 80
